# src/expense/expense.routes.js
@@ -69,5 +69,24 @@ router.post(
     controller.exportFinanceExpense,
   ),
 );
+router
+  .route('/upsert-documents')
+  .post(
+    checkAuth,
+    requestErrorHandlingDecorator(
+      Schema.upsertDocumentsSchema,
+      controller.upsertDocuments,
+    ),
+  );
+
+router
+  .route('/get-documents')
+  .get(
+    checkAuth,
+    requestErrorHandlingDecorator(
+      Schema.getDocumentsSchema,
+      controller.getDocuments,
+    ),
+  );
 
 module.exports = router;
